mi primer commit del proyecto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-
-#Esto es para cambiar porto
-server.port=9090
-
-#CONFIGURACION DE BASE DE DATOS
-
-spring.datasource.url=jdbc:mysql://localhost:3306/bdmatricula?serverTimezone=UTF
+#coenctar a la base de datos
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/bdmatricula?serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 
-#Configurar jpa
+#cinfigurar jpa
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+#configurar tama?o maximo de los archivos subudos por el usuario
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+server.error.whitelabel.enabled=false
